CLOSED FIXED 38949
JavaScript unable to invoke methods declared in QML
https://bugs.webkit.org/show_bug.cgi?id=38949
Summary JavaScript unable to invoke methods declared in QML
Aaron Kennedy
Reported 2010-05-11 16:49:35 PDT
JavaScript code executed by webkit cannot call into QML declared methods, as it does not check for dynamic meta objects. The attached patch addresses this.
Attachments
Proposed patch (1.57 KB, text/plain)
2010-05-11 16:51 PDT, Aaron Kennedy
no flags
Example testcase (313 bytes, application/octet-stream)
2010-05-11 16:51 PDT, Aaron Kennedy
no flags
Aaron Kennedy
Comment 1 2010-05-11 16:51:01 PDT
Created attachment 55775 [details] Proposed patch
Aaron Kennedy
Comment 2 2010-05-11 16:51:33 PDT
Created attachment 55776 [details] Example testcase
Simon Hausmann
Comment 3 2010-05-14 02:58:39 PDT
Simon Hausmann
Comment 4 2010-05-14 03:01:09 PDT
Revision r59460 cherry-picked into qtwebkit-2.0 with commit 592fb4ee6db52db805a6cd24552842e1e3dd7515
Note You need to log in before you can comment on or make changes to this bug.