[Qt] JavaScript unable to invoke methods declared in QML https://bugs.webkit.org/show_bug.cgi?id=38949

Patch by Aaron Kennedy <tffeeb@gmail.com> on 2010-05-14
Reviewed by Simon Hausmann.

JavaScript code executed by webkit cannot call into QML declared
methods, as it does not check for dynamic meta objects.

* bridge/qt/qt_instance.cpp:
(JSC::Bindings::QtInstance::stringValue): Use QMetaObject::metacall.
* bridge/qt/qt_runtime.cpp:
(JSC::Bindings::QtRuntimeMetaMethod::call): Ditto.

Canonical link: https://commits.webkit.org/50614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59460 268f45cc-cd09-0410-ab3c-d52691b4dbfc